--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
     <div class="container container-lg-full">
       <div
         class="slick-slider custom-slider-03"
-        data-slick-options='{"slidesToShow": 1,"dots":false,"arrows":true,"infinite":true,"centerMode":true,"rtl":true,"centerPadding":"calc((100% - 1440px) / 2)","responsive":[{"breakpoint": 1200,"settings": {"slidesToShow":1,"centerMode":false,"arrows":false,"dots":false}},{"breakpoint": 992,"settings": {"slidesToShow":1,"arrows":false,"dots":false}},{"breakpoint": 768,"settings": {"slidesToShow": 1,"arrows":false,"dots":false}},{"breakpoint": 576,"settings": {"slidesToShow": 1,"arrows":false,"dots":false}}]}'
+        data-slick-options='{"slidesToShow": 1,"dots":false,"arrows":true,"rtl":true,"responsive":[{"breakpoint": 1200,"settings": {"slidesToShow":1,"centerMode":false,"arrows":false,"dots":false}},{"breakpoint": 992,"settings": {"slidesToShow":1,"arrows":false,"dots":false}},{"breakpoint": 768,"settings": {"slidesToShow": 1,"arrows":false,"dots":false}},{"breakpoint": 576,"settings": {"slidesToShow": 1,"arrows":false,"dots":false}}]}'
       >
       
         <div class="box">
